--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ LiveDemo3/target
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /JavaGenericsAndCollections/target/
+/DemoJavaThreads/.idea/
+/DemoJavaThreads/DemoJavaThreads.iml
+/DemoJavaThreads/target/
